Fixed spacing on small screens

--- a/main.css
+++ b/main.css
@@ -25,6 +25,10 @@ body {
 	background-color: var(--white);
 }
 
+body.dark {
+	background-color: var(--light_gray);
+}
+
 header {
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
@@ -65,6 +69,7 @@ main {
 	align-items: center;
 	justify-items: center;
 	padding: 2rem;
+	padding-bottom: 8rem;
 }
 
 section {
@@ -244,12 +249,12 @@ thead tr {
 
 @media (max-width: 55rem) {
 	main {
-		gap: 4rem;
+		gap: 6rem;
 	}
 
 	article {
 		grid-template-columns: 1fr;
-		column-gap: 1.5rem;
+		gap: 1.5rem;
 	}
 }
 
